@@ -24,7 +24,8 @@
      - замінено виклик методу makeBaseOperation(..) та обробка операндів
 
 Зміни в Assignment11Part1:
-    - видалено класи-оператори які не відповідають умові.
+    - видалено класи-оператори та інтерфейс Operator, вони замінені одним enum Operator.
+    - змінено блок ініціалізації мапи OPERATORS_MAP для використання enum Operator.
     - метод main ловить винятки та виводить помилку або результат обчислення.
     - видалено метод printResult(..)
     - додано метод calculate(..) який виконує обчислення вхідного виразу з урахуванням змінних.
